force-app/main/default/objects/Marketing_Spend__c/Marketing_Spend__c.object-meta.xml
<CustomObject>
    <label>Marketing Spend</label>
    <nameField>
        <displayFormat>MA-{000000}</displayFormat>
        <label>Marketing Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Spend</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>