force-app/main/default/objects/Marketing_Spend__c/fields/Activity_Number__c.field-meta.xml
<CustomField>
    <fullName>Activity_Number__c</fullName>
    <displayFormat>MAR-{0000}</displayFormat>
    <label>Activity Number</label>
    <type>AutoNumber</type>
</CustomField>