force-app/main/default/objects/Marketing_Spend__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonus</label>
    <type>Checkbox</type>
</CustomField>