force-app/main/default/objects/Marketing_Spend__c/fields/Book_By__c.field-meta.xml
<CustomField>
    <fullName>Book_By__c</fullName>
    <formula>TEXT(YEAR(Date__c+28))+&apos;%2f&apos;+IF( LEN(TEXT(Month(Date__c+28))) &gt; 1 , TEXT(Month(Date__c+28)), &quot;0&quot; + TEXT(Month(Date__c+28))) + &quot;%2f&quot; + IF(LEN(TEXT(Day(Date__c+28))) &gt; 1 , TEXT(Day(Date__c+28)), &quot;0&quot; + TEXT(Day(Date__c+28)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book By</label>
    <type>Text</type>
</CustomField>