force-app/main/default/objects/Marketing_Spend__c/fields/Booking_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID__c</fullName>
    <label>Booking ID - (Print only)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>