force-app/main/default/objects/Marketing_Spend__c/fields/Creative_Dimensions_Size__c.field-meta.xml
<CustomField>
    <fullName>Creative_Dimensions_Size__c</fullName>
    <label>Creative/Dimensions (Size)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Page, 380mm x 262mm (NewsCorp)</fullName>
            </value>
            <value>
                <fullName>Full Page, 374mm x 260mm (NINE)</fullName>
            </value>
            <value>
                <fullName>DPS, 380mm x 551mm (NewsCorp)</fullName>
            </value>
            <value>
                <fullName>DPS, 374mm x 550mm (NINE)</fullName>
            </value>
            <value>
                <fullName>Strip Ad, 92mm x 262mm (NewsCorp)</fullName>
            </value>
            <value>
                <fullName>Strip Ad, 92mm x 260mm (NINE)</fullName>
            </value>
            <value>
                <fullName>Wrap Cover &amp; Back, 260mm x 380mm (NINE)</fullName>
            </value>
            <value>
                <fullName>Wrap, Inside spread, 550mm x 380mm (NINE)</fullName>
            </value>
            <value>
                <fullName>Glossy FP, 378mm x 278mm (NINE)</fullName>
            </value>
            <value>
                <fullName>Glossy DPS, 556mm x 355mm (NINE)</fullName>
            </value>
            <value>
                <fullName>Full Page, 366mm x 254mm (NZ)</fullName>
            </value>
            <value>
                <fullName>Broadsheet, 560mm x 380mm (NZ)</fullName>
            </value>
            <value>
                <fullName>Strip Ad, 254mm x 90mm (NZ)</fullName>
            </value>
            <value>
                <fullName>Travel Solus, 560px x 515px</fullName>
            </value>
            <value>
                <fullName>Travel Multi, 560px x 240px</fullName>
            </value>
            <value>
                <fullName>Escape Solus, 600px x 690px</fullName>
            </value>
            <value>
                <fullName>Escape Multi, 600px x 450px</fullName>
            </value>
            <value>
                <fullName>Digital Banner/s</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>SEARCH</fullName>
            </value>
            <value>
                <fullName>Billboard/s</fullName>
            </value>
            <value>
                <fullName>Travel Zoo (TZ)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>I Know The Pilot (IKTP)</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Glossy DPS, 556mm x 355mm (NZ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>