force-app/main/default/objects/Marketing_Spend__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Marketing Activity Date</label>
    <type>Date</type>
</CustomField>