force-app/main/default/objects/Marketing_Spend__c/fields/date_time_check__c.field-meta.xml
<CustomField>
    <fullName>date_time_check__c</fullName>
    <formula>IF(ms_Start_Date__c  =  ms_End_Date__c, &apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date time check</label>
    <type>Text</type>
</CustomField>