force-app/main/default/objects/Marketing_Spend__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Marketing Spend</relationshipLabel>
    <relationshipName>Marketing_Spend</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>