force-app/main/default/objects/Marketing_Spend__c/fields/Deal_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Deal_Allocation__c</fullName>
    <label>Deal Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Three-way split</fullName>
            </value>
            <value>
                <fullName>Two-way split ad</fullName>
            </value>
            <value>
                <fullName>No split</fullName>
            </value>
            <value>
                <fullName>Four-way split</fullName>
            </value>
            <value>
                <fullName>&gt;four-way split</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>