force-app/main/default/objects/Marketing_Spend__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>(ie: page number / campaign)</description>
    <inlineHelpText>(ie: page number / campaign)</inlineHelpText>
    <label>Detail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>