force-app/main/default/objects/Marketing_Spend__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <formula>DATETIMEVALUE(ms_End_Date__c)   + 1/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndDateTime</label>
    <type>DateTime</type>
</CustomField>