force-app/main/default/objects/Marketing_Spend__c/fields/Finance_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Finance_Invoice_Number__c</fullName>
    <label>Finance Invoice Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>