force-app/main/default/objects/Marketing_Spend__c/fields/Inventory_Title__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Title__c</fullName>
    <formula>TEXT(ms_Marketing_inventory__r.ms_Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Title</label>
    <type>Text</type>
</CustomField>