force-app/main/default/objects/Marketing_Spend__c/fields/InventoryName__c.field-meta.xml
<CustomField>
    <fullName>InventoryName__c</fullName>
    <formula>ms_Marketing_inventory__r.Channel_Supplier_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InventoryName</label>
    <type>Text</type>
</CustomField>