force-app/main/default/objects/Marketing_Spend__c/fields/JV__c.field-meta.xml
<CustomField>
    <fullName>JV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rev Share</label>
    <type>Checkbox</type>
</CustomField>