force-app/main/default/objects/Marketing_Spend__c/fields/Marketing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel__c</fullName>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>BVOD</fullName>
            </value>
            <value>
                <fullName>Sports Brand Integration</fullName>
            </value>
            <value>
                <fullName>Management Fee</fullName>
            </value>
            <value>
                <fullName>Electronic Direct Mail (eDM)</fullName>
                <label>eDM</label>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Audio(Radio)</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>TV Free to air</fullName>
            </value>
            <value>
                <fullName>Social(Facebook &amp; IG)</fullName>
            </value>
            <value>
                <fullName>Social(Youtube)</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Digital Display</fullName>
            </value>
            <value>
                <fullName>News Video</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Digital Media</fullName>
            </value>
            <value>
                <fullName>Revenue Share</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>3rd Party eDM</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Audio(Digital)</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
                <isActive>false</isActive>
                <label>Billboard</label>
            </value>
            <value>
                <fullName>Digital Audio</fullName>
                <isActive>false</isActive>
                <label>Digital Audio</label>
            </value>
            <value>
                <fullName>Mailbox Drop</fullName>
                <isActive>false</isActive>
                <label>Mailbox Drop</label>
            </value>
            <value>
                <fullName>Print Media (Newspaper)</fullName>
                <isActive>false</isActive>
                <label>Print Media (Newspaper)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>