force-app/main/default/objects/Marketing_Spend__c/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <label>Marketing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>GOOGLE</fullName>
            </value>
            <value>
                <fullName>Facebook &amp; Instagram</fullName>
            </value>
            <value>
                <fullName>Spotify</fullName>
            </value>
            <value>
                <fullName>Nine &amp; ARN</fullName>
            </value>
            <value>
                <fullName>Channel 7</fullName>
            </value>
            <value>
                <fullName>Channel 9</fullName>
            </value>
            <value>
                <fullName>Channel 10</fullName>
            </value>
            <value>
                <fullName>SBS</fullName>
            </value>
            <value>
                <fullName>Foxtel</fullName>
            </value>
            <value>
                <fullName>7, 9, 10, SBS, Foxtel</fullName>
            </value>
            <value>
                <fullName>The Sunday Telegraph</fullName>
            </value>
            <value>
                <fullName>The Sunday Hearld Sun</fullName>
            </value>
            <value>
                <fullName>The Sunday Mail</fullName>
            </value>
            <value>
                <fullName>Sunday Mail (SA)</fullName>
            </value>
            <value>
                <fullName>Sunday Times (WA)</fullName>
            </value>
            <value>
                <fullName>Other Print Publication</fullName>
            </value>
            <value>
                <fullName>Media Group</fullName>
            </value>
            <value>
                <fullName>I Know the Pilot</fullName>
            </value>
            <value>
                <fullName>Event Sponsorship</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>ROKT</fullName>
            </value>
            <value>
                <fullName>BING</fullName>
            </value>
            <value>
                <fullName>Cruise Critic</fullName>
            </value>
            <value>
                <fullName>Listnr</fullName>
            </value>
            <value>
                <fullName>Cruise Passenger</fullName>
            </value>
            <value>
                <fullName>WIN Network</fullName>
            </value>
            <value>
                <fullName>2GB / BAY FM (NSW)</fullName>
                <isActive>false</isActive>
                <label>2GB / BAY FM (NSW)</label>
            </value>
            <value>
                <fullName>3AW (VIC)</fullName>
                <isActive>false</isActive>
                <label>3AW (VIC)</label>
            </value>
            <value>
                <fullName>4BC (QLD)</fullName>
                <isActive>false</isActive>
                <label>4BC (QLD)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>