force-app/main/default/objects/Marketing_Spend__c/fields/Media_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Media_Buyer__c</fullName>
    <label>Media Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>THUMP Media</fullName>
            </value>
            <value>
                <fullName>GOOGLE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NZME</fullName>
                <isActive>false</isActive>
                <label>NZME</label>
            </value>
            <value>
                <fullName>NewsCorp</fullName>
                <isActive>false</isActive>
                <label>NewsCorp</label>
            </value>
            <value>
                <fullName>Nine</fullName>
                <isActive>false</isActive>
                <label>Nine</label>
            </value>
            <value>
                <fullName>STUFF Media</fullName>
                <isActive>false</isActive>
                <label>STUFF Media</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>