force-app/main/default/objects/Marketing_Spend__c/fields/Media_Merchant_Account__c.field-meta.xml
<CustomField>
    <fullName>Media_Merchant_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Merchant Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Spend</relationshipLabel>
    <relationshipName>Marketing_Spend</relationshipName>
    <type>Lookup</type>
</CustomField>