force-app/main/default/objects/Marketing_Spend__c/fields/ms_Activity__c.field-meta.xml
<CustomField>
    <fullName>ms_Activity__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id ,  Activity_Number__c,&quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>