force-app/main/default/objects/Marketing_Spend__c/fields/ms_Comment__c.field-meta.xml
<CustomField>
    <fullName>ms_Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>