force-app/main/default/objects/Marketing_Spend__c/fields/ms_Cost__c.field-meta.xml
<CustomField>
    <fullName>ms_Cost__c</fullName>
    <formula>ms_Marketing_inventory__r.ms_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>