force-app/main/default/objects/Marketing_Spend__c/fields/ms_Country__c.field-meta.xml
<CustomField>
    <fullName>ms_Country__c</fullName>
    <formula>TEXT(ms_Marketing_inventory__r.ms_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>