force-app/main/default/objects/Marketing_Spend__c/fields/ms_Deal_marketing_Inventory__c.field-meta.xml
<CustomField>
    <fullName>ms_Deal_marketing_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal marketing Inventory</label>
    <referenceTo>ms_Deal_marketing_Inventory__c</referenceTo>
    <relationshipLabel>Marketing Spend</relationshipLabel>
    <relationshipName>Marketing_Spend</relationshipName>
    <type>Lookup</type>
</CustomField>