force-app/main/default/objects/Marketing_Spend__c/fields/ms_Deal_Title__c.field-meta.xml
<CustomField>
    <fullName>ms_Deal_Title__c</fullName>
    <formula>Deal__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Title</label>
    <type>Text</type>
</CustomField>