force-app/main/default/objects/Marketing_Spend__c/fields/ms_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ms_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>