force-app/main/default/objects/Marketing_Spend__c/fields/ms_DueDateTime__c.field-meta.xml
<CustomField>
    <fullName>ms_DueDateTime__c</fullName>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>