force-app/main/default/objects/Marketing_Spend__c/fields/ms_EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ms_EndDateTime__c</fullName>
    <label>ms EndDateTime</label>
    <type>DateTime</type>
</CustomField>