force-app/main/default/objects/Marketing_Spend__c/fields/ms_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ms_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>