force-app/main/default/objects/Marketing_Spend__c/fields/ms_Geo_c__c.field-meta.xml
<CustomField>
    <fullName>ms_Geo_c__c</fullName>
    <formula>TEXT(ms_Marketing_inventory__r.ms_Geo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ms_Geo__c</label>
    <type>Text</type>
</CustomField>