force-app/main/default/objects/Marketing_Spend__c/fields/ms_Marketing_inventory__c.field-meta.xml
<CustomField>
    <fullName>ms_Marketing_inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Inventory</label>
    <referenceTo>ms_Marketing_Inventory__c</referenceTo>
    <relationshipLabel>Marketing Spend</relationshipLabel>
    <relationshipName>Marketing_Spend</relationshipName>
    <type>Lookup</type>
</CustomField>