force-app/main/default/objects/Marketing_Spend__c/fields/ms_Placement__c.field-meta.xml
<CustomField>
    <fullName>ms_Placement__c</fullName>
    <formula>TEXT(ms_Marketing_inventory__r.ms_Placement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement</label>
    <type>Text</type>
</CustomField>