force-app/main/default/objects/Marketing_Spend__c/fields/ms_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ms_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>