force-app/main/default/objects/Marketing_Spend__c/fields/ms_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ms_Start_Time__c</fullName>
    <formula>ms_Marketing_inventory__r.ms_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ms_Start_Time</label>
    <type>Time</type>
</CustomField>