force-app/main/default/objects/Marketing_Spend__c/fields/ms_startDateTime__c.field-meta.xml
<CustomField>
    <fullName>ms_startDateTime__c</fullName>
    <label>Start Date Start Time</label>
    <type>DateTime</type>
</CustomField>