force-app/main/default/objects/Marketing_Spend__c/fields/ms_Status__c.field-meta.xml
<CustomField>
    <fullName>ms_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>