force-app/main/default/objects/Marketing_Spend__c/fields/ms_subject__c.field-meta.xml
<CustomField>
    <fullName>ms_subject__c</fullName>
    <label>Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>