force-app/main/default/objects/Marketing_Spend__c/fields/ms_Submit_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>ms_Submit_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit For Approval</label>
    <type>Checkbox</type>
</CustomField>