force-app/main/default/objects/Marketing_Spend__c/fields/ms_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>ms_Supplier_Name__c</fullName>
    <formula>TEXT(ms_Marketing_inventory__r.ms_Supplier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>