force-app/main/default/objects/Marketing_Spend__c/fields/Not_RevShare__c.field-meta.xml
<CustomField>
    <fullName>Not_RevShare__c</fullName>
    <formula>NOT(JV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not RevShare</label>
    <type>Checkbox</type>
</CustomField>