force-app/main/default/objects/Marketing_Spend__c/fields/RevShareWindow__c.field-meta.xml
<CustomField>
    <fullName>RevShareWindow__c</fullName>
    <formula>IF(AND(NOT(JV__c),NOT( Deal_ID__c =&quot;12&quot;)), 
TEXT(YEAR(Date__c+5))+&apos;%2f&apos;+IF( LEN(TEXT(Month(Date__c+5))) &gt; 1 , TEXT(Month(Date__c+5)), &quot;0&quot; + TEXT(Month(Date__c+5))) + &quot;%2f&quot; + IF(LEN(TEXT(Day(Date__c+5))) &gt; 1 , TEXT(Day(Date__c+5)), &quot;0&quot; + TEXT(Day(Date__c+5))),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RevShareWindow</label>
    <type>Text</type>
</CustomField>