force-app/main/default/objects/Marketing_Spend__c/fields/Sales_Source_Finance__c.field-meta.xml
<CustomField>
    <fullName>Sales_Source_Finance__c</fullName>
    <label>Sales(Source - Finance)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>