force-app/main/default/objects/Marketing_Spend__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>ESCAPE</fullName>
            </value>
            <value>
                <fullName>EGN</fullName>
            </value>
            <value>
                <fullName>TRAVELLER</fullName>
            </value>
            <value>
                <fullName>FLIPBOOK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>