force-app/main/default/objects/Marketing_Spend__c/fields/start_time__c.field-meta.xml
<CustomField>
    <fullName>start_time__c</fullName>
    <label>start time</label>
    <type>Time</type>
</CustomField>