force-app/main/default/objects/Marketing_Spend__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State/Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>TAD Database</fullName>
            </value>
            <value>
                <fullName>QFF Database</fullName>
            </value>
            <value>
                <fullName>App Users</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
                <isActive>false</isActive>
                <label>Auckland</label>
            </value>
            <value>
                <fullName>Australia (Multiple)</fullName>
                <isActive>false</isActive>
                <label>Australia (Multiple)</label>
            </value>
            <value>
                <fullName>Australia (National)</fullName>
                <isActive>false</isActive>
                <label>Australia (National)</label>
            </value>
            <value>
                <fullName>Bay Of Plenty</fullName>
                <isActive>false</isActive>
                <label>Bay Of Plenty</label>
            </value>
            <value>
                <fullName>Canterbury</fullName>
                <isActive>false</isActive>
                <label>Canterbury</label>
            </value>
            <value>
                <fullName>Hawkes Bay</fullName>
                <isActive>false</isActive>
                <label>Hawkes Bay</label>
            </value>
            <value>
                <fullName>Manawatu-Wanganui_Palmerston_North</fullName>
                <isActive>false</isActive>
                <label>Manawatu-Wanganui (Palmerston North)</label>
            </value>
            <value>
                <fullName>Marlborough</fullName>
                <isActive>false</isActive>
                <label>Marlborough</label>
            </value>
            <value>
                <fullName>Nelson</fullName>
                <isActive>false</isActive>
                <label>Nelson</label>
            </value>
            <value>
                <fullName>New Zealand (Multiple)</fullName>
                <isActive>false</isActive>
                <label>New Zealand (Multiple)</label>
            </value>
            <value>
                <fullName>New Zealand (National)</fullName>
                <isActive>false</isActive>
                <label>New Zealand (National)</label>
            </value>
            <value>
                <fullName>Northland</fullName>
                <isActive>false</isActive>
                <label>Northland</label>
            </value>
            <value>
                <fullName>Otago</fullName>
                <isActive>false</isActive>
                <label>Otago</label>
            </value>
            <value>
                <fullName>Southland</fullName>
                <isActive>false</isActive>
                <label>Southland (Invercargill)</label>
            </value>
            <value>
                <fullName>Taranaki</fullName>
                <isActive>false</isActive>
                <label>Taranaki (New Plymouth)</label>
            </value>
            <value>
                <fullName>Waikato</fullName>
                <isActive>false</isActive>
                <label>Waikato (Hamilton)</label>
            </value>
            <value>
                <fullName>Wellington</fullName>
                <isActive>false</isActive>
                <label>Wellington</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>