force-app/main/default/objects/Marketing_Spend__c/fields/State_Sales__c.field-meta.xml
<CustomField>
    <fullName>State_Sales__c</fullName>
    <label>State Sales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>